RESOLVED FIXED219223
AXIsolatedTree::m_axObjectCache should not be accessed on the secondary AX thread.
https://bugs.webkit.org/show_bug.cgi?id=219223
Summary AXIsolatedTree::m_axObjectCache should not be accessed on the secondary AX th...
Andres Gonzalez
Reported 2020-11-20 13:59:59 PST
AXIsolatedTree::m_axObjectCache should not be accessed on the secondary AX thread.
Attachments
Patch (18.54 KB, patch)
2020-11-20 14:21 PST, Andres Gonzalez
no flags
Patch (18.53 KB, patch)
2020-11-22 11:37 PST, Andres Gonzalez
no flags
Andres Gonzalez
Comment 1 2020-11-20 14:21:58 PST
chris fleizach
Comment 2 2020-11-21 11:07:22 PST
Comment on attachment 414727 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=414727&action=review seems like a good change overall. only comment is that m_usingAXThread is not immediately clear for it's purpose based on the name. Does it mean that this Tree can use the AX thread, or it is on the AX thread? Is there a more clear name available? > Source/WebCore/ChangeLog:10 > + methods. this problem is fixed with this change by adding the member this problem > This problem
Andres Gonzalez
Comment 3 2020-11-22 11:37:59 PST
Andres Gonzalez
Comment 4 2020-11-22 11:40:11 PST
(In reply to chris fleizach from comment #2) > Comment on attachment 414727 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=414727&action=review > > seems like a good change overall. only comment is that m_usingAXThread is > not immediately clear for it's purpose based on the name. > Does it mean that this Tree can use the AX thread, or it is on the AX > thread? Is there a more clear name available? Renamed it to m_usedOnAXThread. > > > Source/WebCore/ChangeLog:10 > > + methods. this problem is fixed with this change by adding the member > > this problem > This problem Fixed. Thanks!
Radar WebKit Bug Importer
Comment 5 2020-11-27 14:01:31 PST
EWS
Comment 6 2020-11-30 06:11:25 PST
Committed r270238: <https://trac.webkit.org/changeset/270238> All reviewed patches have been landed. Closing bug and clearing flags on attachment 414791 [details].
Note You need to log in before you can comment on or make changes to this bug.