Source/WebCore/accessibility/isolatedtree/AXIsolatedTree.h
@@ -322,16 +322,14 @@ class AXIsolatedTree : public ThreadSafeRefCounted<AXIsolatedTree> {
     WTF_MAKE_NONCOPYABLE(AXIsolatedTree); WTF_MAKE_FAST_ALLOCATED;
     friend WTF::TextStream& operator<<(WTF::TextStream&, AXIsolatedTree&);
 public:
-    static Ref<AXIsolatedTree> create();
+    static Ref<AXIsolatedTree> create(AXObjectCache*);
     virtual ~AXIsolatedTree();
 
-    static Ref<AXIsolatedTree> createTreeForPageID(PageIdentifier);
     static void removeTreeForPageID(PageIdentifier);
 
     static RefPtr<AXIsolatedTree> treeForPageID(PageIdentifier);
     static RefPtr<AXIsolatedTree> treeForID(AXIsolatedTreeID);
-    AXObjectCache* axObjectCache() const { return m_axObjectCache; }
-    void setAXObjectCache(AXObjectCache* axObjectCache) { m_axObjectCache = axObjectCache; }
+    AXObjectCache* axObjectCache() const;
 
     RefPtr<AXIsolatedObject> rootNode();
     RefPtr<AXIsolatedObject> focusedNode();
@@ -368,7 +366,7 @@ public:
     AXIsolatedTreeID treeID() const { return m_treeID; }
 
 private:
-    AXIsolatedTree();
+    AXIsolatedTree(AXObjectCache*);
     void clear();
 
     static HashMap<AXIsolatedTreeID, Ref<AXIsolatedTree>>& treeIDCache();
@@ -381,6 +379,7 @@ private:
 
     AXIsolatedTreeID m_treeID;
     AXObjectCache* m_axObjectCache { nullptr };
+    bool m_usedOnAXThread { true };
 
     // Only accessed on main thread.
     HashMap<AXID, Vector<AXID>> m_nodeMap;
@@ -398,6 +397,12 @@ private:
     AXID m_focusedNodeID { InvalidAXID };
     Lock m_changeLogLock;
 };
+
+inline AXObjectCache* AXIsolatedTree::axObjectCache() const
+{
+    ASSERT(isMainThread());
+    return m_axObjectCache;
+}
 
 } // namespace WebCore
 
